<resources>
    <string name="active">Active</string>
    <string name="active_events">Active Events</string>
    <string name="add_profile_photo">Tap to add a profile picture</string>
    <string name="admin">ADMIN</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="admin_login">Admin Login</string>
    <string name="already_checked">Already Checked In</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="already_registered">Already Registered</string>
    <string name="app_title">UniPass</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_delete">Cannot Delete</string>
    <string name="change_password">Change Password</string>
    <string name="check_back_later">Please check back later for upcoming events.</string>
    <string name="checked_in">Checked In</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="choose_how_you_want_to_continue">Choose how you want to continue.</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_details">Contact Details</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_number_invalid">Contact Number must be 10 digits</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_event_to_get_started">Create an event to get started.</string>
    <string name="create_event">Create Event</string>
    <string name="create_event_button">Create Event</string>
    <string name="create__first_event">Create your first event 🚀</string>
    <string name="current_password">Current Password</string>
    <string name="current_password_incorrect">Current Password Incorrect</string>
    <string name="date">Date</string>
    <string name="date_and_time">Date and Time</string>
    <string name="date_and_venue">Date and Venue</string>
    <string name="deactivate_event">Deactivate Event</string>
    <string name="delete">Delete</string>
    <string name="delete_event">Delete Event</string>
    <string name="delete_event_message">Delete "%1$s"?</string>
    <string name="department">Department</string>
    <string name="department_optional">Department (Optional)</string>
<string name="deactivate">Deactivate</string>
    <string name="description">Description</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="download">Download</string>
    <string name="download_pass">Download Pass</string>
    <string name="earlier">Earlier</string>
    <string name="edit_event">Edit Event</string>
    <string name="edit_profile_photo">Edit Profile Photo</string>
    <string name="email">Email</string>
    <string name="enter_admin_password">Enter Password</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="enter_department">Enter Department</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_email_password">Enter Email and Password</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_roll_number">Enter Roll Number</string>
    <string name="enter_roll_number_and_password">"Enter Roll Number and Password"</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_venue">Enter venue</string>
    <string name="entries">%1$d Entries</string>
    <string name="entry_logs">Entry Logs</string>
    <string name="event">Event</string>
    <string name="events_available">%1$d Events Available</string>
    <string name="event_created">"Event Created Successfully"</string>
    <string name="event_deactivated">Event Deactivated</string>
    <string name="event_deleted">Event Deleted</string>
    <string name="event_description">Event Description</string>
    <string name="event_details">Event Details</string>
    <string name="event_ended">Event Ended</string>
    <string name="event_full">Event Full</string>
    <string name="event_name">Event Name</string>
    <string name="event_over">Event Over</string>
    <string name="event_pass">Event Pass</string>
    <string name="event_poster_optional">Event Poster (Optional)</string>
    <string name="event_reactivated_confirmation">Event reactivated successfully.</string>
    <string name="event_registration">Event Registration</string>
    <string name="event_updated_cofirmation">Event Updated Successfully</string>
    <string name="events">Events</string>
    <string name="expired">Expired</string>
    <string name="failed_first">Failed First</string>
    <string name="fill_all_fields">Fill all required fields</string>
    <string name="filter_all">All</string>
    <string name="filter_failed">Failed</string>
    <string name="filter_verified">Verified</string>
    <string name="full_name">Full Name</string>
    <string name="get_started">Get Started</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="hidden_password">********</string>
    <string name="hide_password">Hide Password</string>
    <string name="inactive">Inactive</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="invalid_department">Department must contain at least 2 characters</string>
    <string name="invalid_email_format">Invalid Email Format</string>
    <string name="invalid_event">Invalid Event</string>
    <string name="invalid_event_date">Invalid Event Date</string>
    <string name="invalid_name">Name should contain only letters</string>
    <string name="invalid_participant_limit">Invalid Participant Limit</string>
    <string name="invalid_qr">Invalid QR</string>
    <string name="invalid_roll_number">Invalid Roll Number</string>
    <string name="invalid_roll_number_or_password">"Invalid Roll Number or Password"</string>
    <string name="invalid_venue">Invalid Venue</string>
    <string name="login">Login</string>
    <string name="login_as">Login As</string>
    <string name="login_successful">Login Successful</string>
    <string name="logo">Logo</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="logs_will_appear">Logs will appear after students scan their QR passes.</string>
    <string name="long_event_name">Event name too long</string>
    <string name="manage_system_with_qr">Manage campus events digitally with secure QR-based event passes</string>
    <string name="maximum_participants">Maximum participants</string>
    <string name="my_pass">My Pass</string>
    <string name="my_profile">My Profile</string>
    <string name="my_registrations">My Registrations</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="new_password">New Password</string>
    <string name="newest_first">Newest First</string>
    <string name="no_active_events">No Active Events</string>
    <string name="no_entry_logs">No Entry Logs</string>
    <string name="no_events_available">No Events Available</string>
    <string name="no_events_created">No events created yet</string>
    <string name="no_registrations">No Registrations Yet</string>
    <string name="not_checked_in">Not Checked In</string>
    <string name="ok">OK</string>
    <string name="oldest_first">Oldest First</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="participants_count">Participants %1$d</string>
    <string name="participant_limit">Participant Limit</string>
    <string name="participant_limit_optional">Participant Limit (Optional)</string>
    <string name="participant_limit_validation">Participant limit must be greater than 0</string>
    <string name="participants_title">Participants</string>
    <string name="pass_downloaded">Pass Downloaded</string>
    <string name="pass_not_found">Pass Not Found</string>
    <string name="password">Password</string>
    <string name="password_different_requirement">New password must be different</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="password_requirements">Password must contain at least 8 characters, 1 number and 1 special character</string>
    <string name="password_updated">Password Updated Successfully</string>
    <string name="profile_image_updated">Profile Image Updated</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="roll_already_registered">Roll Number already registered</string>
    <string name="roll_number">Roll Number</string>
    <string name="roll_number_format">Roll : %1$s</string>
    <string name="roll_number_placeholder">22034567</string>
    <string name="reactivate">Reactivate</string>
    <string name="register">Register</string>
    <string name="register_event">Register Event</string>
    <string name="register_events_message">Register for an event to view your event passes here.</string>
    <string name="register_for_event">Register for %1$s</string>
    <string name="registration_closed">Registration Closed</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="registrations">Registrations</string>
    <string name="registered">Registered</string>
    <string name="registered_count">%1$d</string>
    <string name="sample_initials">SN</string>
    <string name="sample_registration_count">Sample Registration Count</string>
    <string name="save">Save</string>
    <string name="save_changes">Save Changes</string>
    <string name="scan_again">Scan Again</string>
    <string name="scan_qr">Scan QR</string>
    <string name="search_name_or_roll">Search by name or roll number</string>
    <string name="search_name_roll">Search by name or roll</string>
    <string name="select_an_event_to_scan_qr">Select an event to scan QR</string>
    <string name="select_time">Select Time</string>
    <string name="settings">Settings</string>
    <string name="short_event_name">Event name too short</string>
    <string name="show_password">Show Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="student">STUDENT</string>
    <string name="student_dashboard">Student Dashboard</string>
    <string name="student_name">Student Name</string>
    <string name="student_name_placeholder">Student</string>
    <string name="student_not_found">Student not found</string>
    <string name="students_already_registered">Students have already registered.</string>
    <string name="take_photo">Take Photo</string>
    <string name="time">Time</string>
    <string name="today">Today</string>
    <string name="update">Update</string>
    <string name="update_name">Update Name</string>
    <string name="update_poster">Update Poster</string>
    <string name="upload_poster">Upload Poster</string>
    <string name="university_name">XYZ University</string>
    <string name="valid">Valid</string>
    <string name="venue">Venue</string>
    <string name="verification">Verification</string>
    <string name="verification_failed">VERIFICATION FAILED</string>
    <string name="verification_successful">VERIFICATION SUCCESSFUL</string>
    <string name="verification_qr">Verification QR</string>
    <string name="verified">Verified</string>
    <string name="verified_first">Verified First</string>
    <string name="view_all">View All</string>
    <string name="view_details">View Details</string>
</resources>